--- a/src/fbl-ovp-demo/public/demo.html
+++ b/src/fbl-ovp-demo/public/demo.html
@@ -10,6 +10,8 @@
     <!-- styles -->
     <link href="/favicon.ico" rel="icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+    <script src=".modules/fbl/ovp-button.js"></script>
 </head>
 
 <body>
