--- a/src/fbl-ovp-demo/index.html
+++ b/src/fbl-ovp-demo/index.html
@@ -7,8 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Open Vue Platform</title>
 
-    <!-- styles -->
+    <!-- style -->
     <link href="/favicon.ico" rel="icon">
+
+    <!-- script -->
+    <script type="module" src="/fbl-ovp-components/index.js"></script>
 </head>
 <body>
     <div id="app"></div>
