--- a/src/fbl-ovp-demo/public/demo.html
+++ b/src/fbl-ovp-demo/public/demo.html
@@ -19,6 +19,10 @@
         function run() {
             alert('網站首頁')
         }
+
+        function goVue() {
+            window.location.href = '/home';
+        }
         
         // loaded
         window.addEventListener('DOMContentLoaded', () => {
@@ -27,7 +31,7 @@
             document.querySelector('button').addEventListener('click', run);
 
             // ovp-button
-            document.querySelector('ovp-button').addEventListener('ovp-click', run);
+            document.querySelector('ovp-button').addEventListener('ovp-click', goVue);
         });
     </script>
 </head>
@@ -42,7 +46,7 @@
     <button class="btn btn-primary">Run</button>
     <br /><br />
     
-    <ovp-button>Run</ovp-button>
+    <ovp-button>Go Vue</ovp-button>
     <br /><br />
 </body>
 
